[package]
name = "piston-split_controller"
version = "0.10.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["controller", "split", "piston"]
description = "A Piston library for handling split layout state and events"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/split_controller.git"
homepage = "https://github.com/PistonDevelopers/split_controller"

[lib]
name = "split_controller"
path = "src/lib.rs"

[dependencies]
vecmath = "1.0.0"
pistoncore-input = "0.26.0"

[dev-dependencies]
pistoncore-sdl2_window = "0.60.0"
piston2d-opengl_graphics = "0.65.0"
piston2d-graphics = "0.32.0"
piston = "0.46.0"
