[package]
name = "piston-split_controller"
version = "0.13.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["controller", "split", "piston"]
description = "A Piston library for handling split layout state and events"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/split_controller.git"
homepage = "https://github.com/PistonDevelopers/split_controller"

[lib]
name = "split_controller"
path = "src/lib.rs"

[dependencies]
vecmath = "1.0.0"
pistoncore-input = "1.0.0"

[dev-dependencies]
pistoncore-sdl2_window = "0.65.0"
piston2d-opengl_graphics = "0.72.0"
piston2d-graphics = "0.36.0"
piston = "0.51.0"
